<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/dialog_background">

    <!-- Title of the Dialog -->
    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_expense"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"/>

    <!-- Amount Input Field -->
    <EditText
        android:id="@+id/amount_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_amount"
        android:padding="10dp"
        android:background="@drawable/edittext_background"
        android:inputType="numberDecimal"
        android:layout_marginTop="15dp"/>

    <!-- Type Dropdown Field (Spinner) -->
    <Spinner
        android:id="@+id/type_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/edittext_background"
        android:layout_marginTop="10dp"/>

    <!-- Note Input Field -->
    <EditText
        android:id="@+id/note_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_note"
        android:padding="10dp"
        android:background="@drawable/edittext_background"
        android:inputType="text"
        android:layout_marginTop="15dp"/>

    <!-- Date Selection Input Field -->
    <EditText
        android:id="@+id/date_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/select_date"
        android:inputType="date"
        android:padding="10dp"
        android:background="@drawable/edittext_background"
        android:focusable="true"
        android:clickable="true"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"/>

    <!-- Buttons for Add and Cancel -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel_btn"
            android:background="@drawable/button_background"
            android:textColor="#FFFFFF"/>

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/add_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_btn"
            android:background="@drawable/button_background"
            android:textColor="#FFFFFF"/>


    </LinearLayout>

</LinearLayout>
