<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background_color_application"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_name"
                android:textStyle="bold"
                android:textSize="28sp"
                android:gravity="center"
                android:id="@+id/app_name"
                android:textColor="@color/black"
                android:layout_marginBottom="10dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textStyle="bold"
                android:textSize="26sp"
                android:gravity="center"
                android:id="@+id/text_login"
                android:textColor="@color/black"
                android:layout_marginBottom="20dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:layout_margin="12dp"
                android:textColorHint="@color/hint_color"
                android:padding="16dp"
                android:background="@drawable/login_editbox"
                android:textSize="20sp"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:id="@+id/email_login"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColorHint="@color/hint_color"
                android:layout_margin="12dp"
                android:background="@drawable/login_editbox"
                android:padding="16dp"
                android:textSize="20sp"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:id="@+id/password_login"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/textcolor"
                android:textStyle="bold"
                android:layout_marginEnd="80dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:id="@+id/forgot_password_login"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="40dp"
                android:backgroundTint="@color/loginbutton"
                android:padding="14dp"
                android:id="@+id/login_button"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account_sing_up"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/textcolor"
                android:textStyle="bold"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="110dp"
                android:id="@+id/do_not_have_account_login"
                />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
