<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_color_application"
    tools:context=".HomeFragment">

    <!-- Existing Toolbar -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/toolbar"
            android:id="@+id/toolbar" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Existing Income/Expense Card -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#33FFFFFF"
        app:cardElevation="10dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="4dp"
                android:background="@drawable/card_view_income_expense_bg"
                android:padding="8dp">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textColor="@color/income"
                        android:text="@string/income"
                        android:textSize="20sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textColor="@color/expense"
                        android:text="@string/expense"
                        android:textSize="20sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textColor="@color/balance"
                        android:text="@string/balance"
                        android:textSize="20sp" />
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/card_view_income_expense_amount_bg"
                android:padding="8dp">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textColor="@color/income"
                        android:text="@string/income_amount"
                        android:id="@+id/income_amount_result"
                        android:textSize="20sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textColor="@color/expense"
                        android:text="@string/expense_amount"
                        android:id="@+id/expense_amount_result"
                        android:textSize="20sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textColor="@color/balance"
                        android:text="@string/balance_amount"
                        android:id="@+id/balance_amount_result"
                        android:textSize="20sp" />
                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <!-- Existing FloatingActionButtons and CoordinatorLayout -->
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="160dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expense"
                android:id="@+id/expense_ft_txt"
                android:padding="5dp"
                android:textColor="@color/white"
                android:background="@color/expense"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"
                android:visibility="invisible"
                android:textAppearance="?android:textAppearanceSmall"
                android:contentDescription="@string/expense_description" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/expense_ft_btn"
                android:layout_gravity="bottom|end"
                android:backgroundTint="@color/expense"
                android:contentDescription="@string/expense_logo"
                android:elevation="6dp"
                app:fabSize="mini"
                android:visibility="invisible"
                app:pressedTranslationZ="12dp"
                android:src="@drawable/expense" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="90dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/income"
                android:id="@+id/income_ft_txt"
                android:padding="5dp"
                android:textColor="@color/white"
                android:background="@color/income"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"
                android:visibility="invisible"
                android:textAppearance="?android:textAppearanceSmall"
                android:contentDescription="@string/income_description" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/income_ft_btn"
                android:layout_gravity="bottom|end"
                android:backgroundTint="@color/income"
                android:contentDescription="@string/income_logo"
                android:elevation="6dp"
                app:fabSize="mini"
                android:visibility="invisible"
                app:pressedTranslationZ="12dp"
                android:src="@drawable/income" />
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/main_ft_btn"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/main_fab_bg"
            android:contentDescription="@string/main_logo"
            android:elevation="6dp"
            app:pressedTranslationZ="12dp"
            android:src="@drawable/plus"
            app:fabSize="normal" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</LinearLayout>
