<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background_color_application"
    tools:context=".ForgotPasswordActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textStyle="bold"
                android:textSize="26sp"
                android:gravity="center"
                android:id="@+id/text_forgot_password"
                android:textColor="@color/black"
                android:layout_marginBottom="20dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email"
                android:layout_margin="12dp"
                android:textColorHint="@color/hint_color"
                android:padding="16dp"
                android:background="@drawable/login_editbox"
                android:textSize="20sp"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:id="@+id/email_forgot_password"
                tools:ignore="TextFields" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reset_password"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="40dp"
                android:backgroundTint="@color/loginbutton"
                android:padding="14dp"
                android:id="@+id/reset_password_button"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/back_to_login"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/textcolor"
                android:textStyle="bold"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="190dp"
                android:id="@+id/back_to_login_text"
                />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
