<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_color_application">


    <!-- Existing Toolbar -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/toolbar"
            android:id="@+id/toolbar" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:textStyle="bold"
        android:textSize="28sp"
        android:gravity="center"
        android:layout_marginTop="55dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:textColor="@color/black"
        android:layout_marginBottom="110dp"

    />

    <EditText
        android:id="@+id/edit_current_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="-15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="18dp"
        android:autofillHints=""
        android:background="@drawable/login_editbox"
        android:hint="@string/current_password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColor="@color/black"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/edit_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="18dp"
        android:autofillHints=""
        android:background="@drawable/login_editbox"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColor="@color/black"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/edit_confirm_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:autofillHints=""
        android:hint="@string/confirm_new_password"
        android:layout_marginBottom="18dp"
        android:padding="16dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_color"
        android:background="@drawable/login_editbox"
        android:inputType="textPassword"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/btn_change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/loginbutton"
        android:padding="14dp"
        android:text="@string/change_password"
        android:textColor="@color/white"
        android:textSize="24sp"
        tools:ignore="DuplicateSpeakableTextCheck,VisualLintButtonSize" />

</LinearLayout>
